Consolidate inventory editing UX
